# rust_learning

./: script.sh
adapter_dp/: Cargo.toml
adapter_dp/src/: main.rs
add/: Cargo.toml
and_then/: Cargo.toml
and_then/src/: main.rs
bard/: Cargo.toml
bard/src/: main.rs
bfs_graph/: Cargo.toml
bfs_graph/src/: main.rs
binary_search_tree/src/: main.rs
borrowing/src/: main.rs
brasileirao/: Cargo.toml
brasileirao/src/: main.rs
closures/src/: main.rs
closures2/: Cargo.toml
closures2/src/: main.rs
code_test/: Cargo.toml
code_test/src/: main.rs
collections/src/: main.rs
collections2/: Cargo.toml
collections2/src/: main.rs
compound/src/: main.rs
data_modeling/: Cargo.toml
data_modeling/src/: main.rs
dref/: Cargo.toml
dref/src/: main.rs
edb_new/: Cargo.toml
edb_new/dbschema/: default.esdl
edb_new/dbschema/migrations/: 00001-m1uusch.edgeql  00002-m17lvar.edgeql  00003-m14ycxx.edgeql  00004-m13dawf.edgeql
edb_new/src/: main.rs
edgeDB1/: Cargo.toml
edgeDB2/: Cargo.toml
edgeDB2/dbschema/: default.esdl
edgeDB2/src/: main.rs
enums/src/: main.rs
env_vars/: Cargo.toml
env_vars/src/: main.rs
error_handling/src/: main.rs
factory_method/src/: main.rs
generics/src/: main.rs
hamburger/: Cargo.toml
hamburger/src/: main.rs
hash_struck/: Cargo.toml
hash_struck/src/: main.rs
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
iterators/src/: main.rs
iterators2/src/: main.rs
itertools/: Cargo.toml  log1.txt  log2.txt  output.txt
itertools/src/: main.rs
jup/: Untitled.ipynb
jv/: Cargo.toml
jv/src/: main.rs
left_pad/: Cargo.toml
left_pad/src/: main.rs
levenshtein/src/: main.rs
lifetimes/src/: main.rs
lifetimes2/: Cargo.toml
lifetimes3/: Cargo.toml
log_test/: Cargo.toml
minigrep/: Cargo.toml  output.txt  poem.txt
mistakes/: Cargo.toml
parse1/: Cargo.toml
pok/: Cargo.toml
pok/src/: api.rs  color.rs  main.rs  models.rs  print.rs  utils.rs
poke_types_test/: Cargo.toml
pokeapi_db/: .env  Cargo.toml  diesel.toml  pokemon.db
pokeapi_db/migrations/: pokemon.db
pokeapi_db/migrations/2024-10-08-113826_create_pokemon/: down.sql  up.sql
pokeapi_db/src/: main.rs  schema.rs
postgres_crud_api/: Cargo.toml
qt_desktop/: Cargo.toml  justfile
question_mark/: ;
some_functions/: Cargo.toml
sqlite/: Cargo.toml
string_split/: Cargo.toml
stuffs/: Cargo.toml
stuffs2/: Cargo.toml
tcp_listener/: Cargo.toml
tcp_phinder/: Cargo.toml
tcp_phinder/src/: client.rs  main.rs  server.rs
testp1/: Cargo.toml
threads1/: Cargo.toml
threads2/: Cargo.toml
threads3/: Cargo.toml
traits3/: Cargo.toml
typestate/: Cargo.toml
url/: Cargo.toml
vec_equal/: Cargo.toml
workspaces/: Cargo.toml
yew-hml/: Cargo.toml  index.html
yew-todo/: Cargo.toml
yew-todo/src/: main.rs
(+51 files in other folders)
