[package]
name = "pokeapi_db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0", features = ["sqlite"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
