[package]
name = "todomvc"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
strum = "0.24"
strum_macros = "0.24"
serde = "1"
serde_derive = "1"
yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
